--- a/art.html
+++ b/art.html
@@ -84,7 +84,7 @@
   </div>
 
   <footer>
-    <p>&copy; 2024 Art Showcase. All Rights Reserved.</p>
+    <p>&copy; 2025 Anish D'Souza. All Rights Reserved.</p>
   </footer>
 
   <script src="slideshow.js"></script>
