--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   </nav>
 
   <footer>
-    <p>&copy; 2025 Anish Dsouza. All Rights Reserved.</p>
+    <p>&copy; 2025 Anish D'Souza. All Rights Reserved.</p>
   </footer>
 </body>
 </html>
