--- a/resume.html
+++ b/resume.html
@@ -26,7 +26,7 @@
   </nav>
 
   <footer>
-    <p>&copy; <span class="footer-highlight">2024 Anish's Portfolio</span></p>
+    <p>&copy; <span class="footer-highlight">2025 Anish D'Souza. All Rights Reserved.</span></p>
   </footer>
 </body>
 </html>
