--- a/gallery.html
+++ b/gallery.html
@@ -29,7 +29,7 @@
   </div>
 
   <footer>
-    <p>&copy; 2024 Anish Dsouza. All Rights Reserved.</p>
+    <p>&copy; 2025 Anish D'Souza. All Rights Reserved.</p>
   </footer>
 </body>
 </html>
